{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 36,
  "lineage": "c88ff96e-06b9-668d-d2ac-3131c66f27ed",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-03T11:46:30.805-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-infra-123/global/firewalls/flask-app-firewall1",
            "log_config": [],
            "name": "flask-app-firewall1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/global/networks/default",
            "priority": 1000,
            "project": "terraform-infra-123",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/global/firewalls/flask-app-firewall1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-03T11:46:30.805-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-infra-123/global/firewalls/allow-ssh1",
            "log_config": [],
            "name": "allow-ssh1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/global/networks/default",
            "priority": 1000,
            "project": "terraform-infra-123",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/global/firewalls/allow-ssh1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "instance1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20220719",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/zones/us-central1-c/disks/flask-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-infra-123/zones/us-central1-c/instances/flask-vm1",
            "instance_id": "999376160645676135",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "_K2MryWSJB8=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync; pip install flask",
            "name": "flask-vm1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.136.72.9",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/regions/us-central1/subnetworks/default",
                "subnetwork_project": "terraform-infra-123"
              }
            ],
            "project": "terraform-infra-123",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/zones/us-central1-c/instances/flask-vm1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "instance1"
            ],
            "tags_fingerprint": "Td9CqObS2LE=",
            "zone": "us-central1-c"
          }
        },
        {
          "index_key": "instance2",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20220719",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/zones/us-central1-c/disks/flask-vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-infra-123/zones/us-central1-c/instances/flask-vm2",
            "instance_id": "4899147761800674406",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "_K2MryWSJB8=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync; pip install flask",
            "name": "flask-vm2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.220.97",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/global/networks/default",
                "network_ip": "10.128.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/regions/us-central1/subnetworks/default",
                "subnetwork_project": "terraform-infra-123"
              }
            ],
            "project": "terraform-infra-123",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-infra-123/zones/us-central1-c/instances/flask-vm2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "instance2"
            ],
            "tags_fingerprint": "DSUaliUo3TI=",
            "zone": "us-central1-c"
          }
        }
      ]
    }
  ]
}